asyncnoter: fix overlapping flash-warning and readonly-link

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -359,3 +359,8 @@ div.format .status > .statustext
 {
     margin-bottom: 10px;
 }
+
+#flashwarning
+{
+    clear: both;
+}
